# krova

./: .gitignore  DEPLOY.md  KEYS_REQUIRED.md  KROVA_COMPLETE_BIBLE.md  README.md  SETUP_GUIDE.md  bible.md  context.md  decisions.md  docker-compose.yml  layers.md  plan.md
.claude/: settings.local.json
krova/: .dockerignore  .env.example  Dockerfile  Procfile  alembic.ini  nixpacks.toml  pyproject.toml  railpack.json  railway.toml  requirements.txt  start.sh
krova-mobile/: .env.example  README.md  next.config.ts  package-lock.json  package.json
krova-website/: README.md  (+4 more)
krova/alembic/: env.py
krova/alembic/versions/: 001_initial_schema.py  002_add_phone_to_users.py  003_add_intelligence_layers.py  004_add_phase1_tables.py  005_add_bsp_tables.py  006_add_teams.py  007_add_business_fields.py  008_sync_model_columns.py  009_sync_all_model_columns.py
krova/infrastructure/docker/: Dockerfile.ai  Dockerfile.api  Dockerfile.ingestion  Dockerfile.workers  docker-compose.yml
krova/scripts/: create_demo_user.py  seed_dev.py
krova/services/ai-brain/analysis/: nightly.py
krova/services/api/: main.py
krova/services/api/dependencies/: auth.py  cache.py  database.py
krova/services/api/middleware/: auth.py  logging.py  rate_limit.py
krova/services/api/routers/: __init__.py  actions.py  analytics.py  auth.py  businesses.py  channels.py  conversations.py  customers.py  export.py  insights.py  intelligence.py  platforms.py  team.py  webhooks.py
krova/services/data-ingestion/handlers/: whatsapp.py
krova/services/data-ingestion/queue/: producer.py
krova/services/data-ingestion/validators/: meta.py
krova/services/workers/: action_worker.py  analysis_worker.py  bsp_sender.py  email_processor.py  gmail_worker.py  intelligence_worker.py  message_processor.py  notification_worker.py  outlook_worker.py
krova/shared/cache/: keys.py  redis_client.py
krova/shared/claude/: batch.py  client.py  streaming.py
krova/shared/config/: settings.py
krova/shared/context/: builder.py
krova/shared/database/: base.py  connection.py
krova/shared/database/models/: __init__.py  action.py  analysis.py  autopilot.py  benchmark.py  business.py  commitment.py  competitor.py  conversation.py  customer.py  dna.py  growth_report.py  intelligence.py  message.py  platform.py  prediction.py  reputation.py  revenue.py  revenue_signal.py  team_member.py  user.py  weekly_insight.py
krova/shared/encryption/: tokens.py
krova/shared/integrations/gmail/: client.py
krova/shared/integrations/instagram/: client.py  message_types.py
krova/shared/integrations/outlook/: client.py
krova/shared/integrations/whatsapp/: client.py  message_types.py  validator.py
krova/shared/prompts/: business_dna.py  commitment_extraction.py  competitor_extraction.py  context_brief.py  conversation.py  customer_intelligence.py  email_classifier.py  growth_blockers.py  loss_postmortem.py  nightly_analysis.py  predictions.py  revenue_leak.py  weekly_insight.py
krova/shared/queue/: bullmq_client.py  job_types.py  rate_limiter.py
krova/shared/utils/: encryption.py  errors.py  logging.py  sentry.py
krova/tests/: test_health.py
(+76 files in other folders)
