[tool.poetry]
name = "krova"
version = "0.1.0"
description = "AI-powered autonomous business intelligence for Indian SMBs"
authors = ["KROVA Team"]
readme = "README.md"
packages = [{ include = "shared" }, { include = "services" }]

[tool.poetry.dependencies]
python = "^3.11"

# ── Web framework ──────────────────────────────────────────────────────────
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
gunicorn = "^23.0.0"
python-multipart = "^0.0.12"  # Required for FastAPI form data

# ── Database ───────────────────────────────────────────────────────────────
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"          # Async PostgreSQL driver
alembic = "^1.14.0"          # Database migrations

# ── Redis & Queue ──────────────────────────────────────────────────────────
redis = { version = "^5.2.0", extras = ["asyncio"] }

# ── Settings & Validation ──────────────────────────────────────────────────
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# ── AI ─────────────────────────────────────────────────────────────────────
anthropic = "^0.40.0"

# ── Auth ───────────────────────────────────────────────────────────────────
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
supabase = "^2.10.0"

# ── Encryption ─────────────────────────────────────────────────────────────
cryptography = "^43.0.0"     # Fernet for encrypting API tokens in DB

# ── HTTP client ────────────────────────────────────────────────────────────
httpx = "^0.27.0"            # Async HTTP — Meta API, Google API, Microsoft API

# ── Scheduling ─────────────────────────────────────────────────────────────
apscheduler = "^3.10.4"      # Nightly analysis trigger

# ── Rate limiting ──────────────────────────────────────────────────────────
slowapi = "^0.1.9"           # FastAPI rate limiting middleware

# ── Monitoring ─────────────────────────────────────────────────────────────
sentry-sdk = { version = "^2.19.0", extras = ["fastapi"] }

# ── Google APIs ────────────────────────────────────────────────────────────
google-auth = "^2.36.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.155.0"

# ── Utilities ──────────────────────────────────────────────────────────────
python-dotenv = "^1.0.1"    # Load .env in development
email-validator = "^2.2.0"  # Required by Pydantic EmailStr

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"            # TestClient for FastAPI
black = "^24.10.0"
flake8 = "^7.1.0"
isort = "^5.13.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Tool configuration ─────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
